# yandex-queries-telegram-bot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.py
app/app/: main.py
app/app/core/: config.py
app/app/handlers/: commands.py
app/app/services/: yandex_api.py
app/app/utils/: get_user.py  helpers.py  hosts.py
